--- a/utils/pyproject.toml
+++ b/utils/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Zach Taira"]
 [tool.poetry.dependencies]
 python = "^3.7"
 "ruamel.yaml" = "^0.16.5"
+plumbum = "^1.6.8"
 
 [tool.poetry.dev-dependencies]
 astroid = "2.2.5"
