--- a/dotfiles/i3status.conf
+++ b/dotfiles/i3status.conf
@@ -11,6 +11,7 @@ general {
         interval = 1
 }
 
+order += "path_exists vpn"
 order += "battery all"
 order += "volume master"
 order += "cpu_usage"
@@ -18,20 +19,11 @@ order += "wireless _first_"
 order += "ethernet _first_"
 order += "tztime local"
 
-volume master {
-        format = "🔊 %volume 🔊"
-        format_muted = "🔇 %volume 🔇"
-        device = "pulse:alsa_output.pci-0000_00_1f.3.analog-stereo"
-}
-
-wireless _first_  {
-        format_up = "📶 %ip | %bitrate | %frequency at %essid 📶"
-        format_down = "📶 Wi-Fi: down 📶"
-}
-
-ethernet _first_ {
-        format_up = "🔥 ethernet: %ip 🔥"
-        format_down = "🔥 ethernet: down 🔥"
+path_exists vpn {
+       # path exists when a vpn is up
+       path = "/proc/sys/net/ipv4/conf/tun0"
+       format = "🔐 vpn: on 🔐"
+       format_down = ""
 }
 
 battery all {
@@ -42,10 +34,26 @@ battery all {
         status_full = "😊"
 }
 
-tztime local {
-        format = "🕒 %Y-%m-%d %H:%M:%S %z 🕒 "
+volume master {
+        format = "🔊 %volume 🔊"
+        format_muted = "🔇 %volume 🔇"
+        device = "pulse:alsa_output.pci-0000_00_1f.3.analog-stereo"
 }
 
 cpu_usage  {
         format = "🤔 %usage 🤔"
+}
+
+wireless _first_  {
+        format_up = "📶 %ip | %bitrate | %frequency at %essid 📶"
+        format_down = ""
+}
+
+ethernet _first_ {
+        format_up = "🔥 eth: %ip 🔥"
+        format_down = ""
+}
+
+tztime local {
+        format = "🕒 %Y-%m-%d %H:%M:%S %z 🕒 "
 }
