--- a/dotfiles/config/i3/config
+++ b/dotfiles/config/i3/config
@@ -131,6 +131,10 @@ bindsym $mod+Shift+8 move container to workspace $ws8
 bindsym $mod+Shift+9 move container to workspace $ws9
 bindsym $mod+Shift+0 move container to workspace $ws10
 
+# move workspaces around
+bindsym $mod+Shift+E move workspace to output right
+bindsym $mod+Shift+O move workspace to output left
+
 # reload the configuration file
 bindsym $mod+Shift+J reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
