--- a/dotfiles/config/i3/config
+++ b/dotfiles/config/i3/config
@@ -179,9 +179,13 @@ bar {
 # From lber
 # ======================================================================
 # Pulse Audio controls
-bindsym XF86AudioMute exec amixer sset 'Master' toggle
-bindsym XF86AudioLowerVolume exec amixer sset 'Master' 5%-
-bindsym XF86AudioRaiseVolume exec amixer sset 'Master' 5%+
+# bindsym XF86AudioMute exec amixer sset 'Master' toggle
+# bindsym XF86AudioLowerVolume exec amixer sset 'Master' 5%-
+# bindsym XF86AudioRaiseVolume exec amixer sset 'Master' 5%+
+# F40+
+bindsym XF86AudioMute exec wpctl set-mute @DEFAULT_SINK@ toggle
+bindsym XF86AudioLowerVolume exec wpctl set-volume @DEFAULT_SINK@ .05-
+bindsym XF86AudioRaiseVolume exec wpctl set-volume @DEFAULT_SINK@ .05+
 
 # Screen brightness controls
 bindsym XF86MonBrightnessUp exec xbacklight -inc 5 # increase screen brightness
