--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -10,6 +10,11 @@ bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -i -f -selection
 bind | split-window -h
 bind - split-window -v
 
+# make tmux-menus work
+run-shell ~/.tmux/plugins/tmux-menus/menus.tmux
+set -g @menus_trigger 'Space'
+set -g @menus_display_commands 'Yes'
+
 # tool to reload tmux sessions from a config file:
 # https://tmuxp.git-pull.com/
 # pip install tmuxp
